--- a/json/settings.json
+++ b/json/settings.json
@@ -1,7 +1,6 @@
 {
-    "settings": [
-        {
-            "weather": "normal",
+
+            "weather": "storm",
             "catchup_on": true,
             "catchup_steps": 255,
             "catchup_time": 5,
@@ -9,11 +8,10 @@
             "storms_on": true,
             "storms_start_time": 21,
             "storms_end_time": 0,
-            "storms_freq": 1, //todo determine how this will work
+            "storms_freq": 1,
             "clouds_on": true,
             "clouds_start_time": 21,
             "clouds_end_time": 0,
-            "clouds_freq": 1 //todo determine how this will work
-        }
-    ]
+            "clouds_freq": 1
+
 }
