--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "request": "launch",
             "stopOnEntry": false,
             "pythonPath": "${config:python.pythonPath}",
-            "program": "${workspaceRoot}/outlet/outlet.py",
-            "cwd": "${workspaceRoot}/outlet",
+            "program": "${workspaceRoot}/whet.py",
+            "cwd": "${workspaceRoot}",
             "env": {},
             "envFile": "${workspaceRoot}/.env",
             "debugOptions": [
